--- a/src/Views/fHoanThanh_NhapHang.form
+++ b/src/Views/fHoanThanh_NhapHang.form
@@ -128,6 +128,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="L&#x1b0;u v&#xe0; xu&#x1ea5;t b&#xe1;o c&#xe1;o"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonLuuVaXuatBaoCaoActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel7">
           <Properties>
