--- a/src/Views/fThongBao.form
+++ b/src/Views/fThongBao.form
@@ -69,7 +69,7 @@
             </Property>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="1" rowCount="10">
-                <Column editable="false" title="Th&#xf4;ng b&#xe1;o" type="java.lang.String"/>
+                <Column editable="false" title="" type="java.lang.String"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
